Fixed spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -83,7 +83,9 @@ p {
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
+    margin-bottom: 1%;
+    margin-top: 1%;  
 }
 
 .middle-content {
@@ -192,6 +194,7 @@ footer nav a {
     display: flex;
     /* justify-content: space-between; */
     align-items: flex-end;
+    margin-bottom: 1%;
 }
     
     .top-navigation a{
@@ -233,47 +236,58 @@ footer nav a {
         justify-content: space-between;
         margin: 10px 0;
         width: 100%;
-        justify-content: space-around;
+        margin-left:1%;
     }
 
     .paragraphs2{
         display:flex;
-        justify-content: space-around;
         margin-bottom: 20px;
         width: 100%;
-        padding-right: 2%;
+        padding-right: 3%;
         padding-left: 2%;
-        /* justify-content: space-around; */
+        justify-content: space-between;
+        margin-left:1%;
     }
 
 
     .individual{
-        /* margin-left: 13px;
-        margin-right: 13px; */
-        /* border: 1px solid black; */
         width: 100%;
         padding: 2%;
+        margin-right: 4%;
         border-bottom: dashed 1px black ;
-        /* margin-left: 4%;
-        margin-right: 4%; */
     }
-/* 
-    div.test{
-        display: flex;
-        border: 5px solid yellow;
-        margin-right: 90%;
-    } */
+
+    div #move1{
+        padding-right: 1%;
+        margin-left: -3%;
+    }
+
+
+    div #move2{
+        padding-right: 1%;
+        margin-right: 3%;
+        margin-left: -5%;
+    }
+
+
+    div #move3{
+        padding-left: 5%;    
+    }
+
+    div #move4{
+        margin-left: 4%;    
+    }
+
 
 
     .individual2{
-        /* margin-left: 13px;
-        margin-right: 13px; */
-        /* border: 1px solid black; */
         width: 100%;
         padding: 2%;
         border-bottom: dashed 1px black ;
-        /* margin-left: 4%;
-        margin-right: 4%; */
+    }
+
+    #bordered{
+        border-bottom: dashed 1px black ;
     }
 
     .letsWork{
@@ -294,3 +308,8 @@ footer nav a {
         background-color: white;
         font-size: 85%;
     }
+
+    .dumbo{
+        margin-bottom: 1%;
+    }
+
